Fix unlimited valid_until & modal datepicker z-index

--- a/app/app/styles/_modal.scss
+++ b/app/app/styles/_modal.scss
@@ -208,7 +208,7 @@ body.ngdialog-open {
 }
 
 .ngdialog {
-    z-index: 2000 !important;
+    z-index: 200 !important;
     animation: 0.5s ease 0s normal none 1 ngdialog-fadein;
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
     bottom: 0;
